--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,9 +1,14 @@
-method-lines:
-    config:
-       threshold: 25
-argument-count:
-    config:
-       threshold: 3
-similar-code:
-    config:
-       threshold: 3
+version: "2"
+checks:
+    method-lines:
+        config:
+            threshold: 25
+    argument-count:
+        config:
+            threshold: 3
+    similar-code:
+        config:
+            threshold: 3
+    method-complexity:
+        config:
+            threshold: 12
